# ParallelLabs

./: README.md
Parallel_Lab-1/: CMakeLists.txt  README.md  main.c
Parallel_Lab-1/include/: utils.h  vector.h
Parallel_Lab-2/: CMakeLists.txt  README.md  main.c
Parallel_Lab-3/: CMakeLists.txt  README.md
Parallel_Lab-3/src/: main.c
Parallel_Lab-5/: CMakeLists.txt  README.md
Parallel_Lab-5/src/: main.c
